# tai-storage-s3

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/tai42_storage_s3/: __init__.py  client.py  settings.py  storage.py  tai-plugin.yml
src/tai_storage_s3/: __init__.py  client.py  settings.py  storage.py  tai-plugin.yml
tests/: conftest.py  test_client.py  test_import_graph.py  test_plugin_spec.py  test_storage.py
