[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai42-storage-s3"
version = "0.1.0"
description = "S3 storage backend for the TAI ecosystem — text, binary, and media content over an S3 bucket."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "tai42", email = "oss@tai42.ai" },
]
keywords = ["mcp", "storage", "s3", "aioboto3", "tai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # The pure interface contract — the Storage ABC, ObjectStat, assert_not_root,
    # and the tai42_app handle the backend registers through.
    "tai42-contract>=0.1,<0.2",
    # PooledClient + TaiBaseSettings + the settings cache registry.
    "tai42-kit>=0.1,<0.2",
    # The async S3 driver and its config/exception types (imported directly).
    "aioboto3>=15,<16",
    "botocore>=1.40,<1.41",
    # SecretStr for the AWS credentials and the settings base/config.
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
]

[project.urls]
Homepage = "https://tai42.ai"
Repository = "https://github.com/tai42ai/tai-storage-s3"
Issues = "https://github.com/tai42ai/tai-storage-s3/issues"
Changelog = "https://github.com/tai42ai/tai-storage-s3/blob/main/CHANGELOG.md"

[dependency-groups]
# PEP 735 dev group — installed by default on `uv sync`, so the gate
# `uv sync && uv run pytest && uv run ruff check . && uv run pyright` runs clean.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.389",
    # The plugin-spec test parses tai-plugin.yml.
    "pyyaml>=6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai42_storage_s3*"]

[tool.setuptools.package-data]
tai42_storage_s3 = ["py.typed", "tai-plugin.yml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
xfail_strict = true
# Turn warnings into errors so a real defect that only surfaces as a warning
# (e.g. a missing await -> "coroutine was never awaited") fails the suite loudly
# instead of passing green.
filterwarnings = ["error"]

[tool.coverage.run]
source = ["tai42_storage_s3"]

[tool.coverage.report]
fail_under = 97

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]


# The version floors in [project] are the compatibility contract; these path
# sources resolve the sibling checkouts while the packages are unpublished.
# They are not part of wheel metadata.
[tool.uv.sources]
tai42-contract = { path = "../tai-contract", editable = true }
tai42-kit = { path = "../tai-kit", editable = true }
[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PIE", "PT", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tai42_skeleton".msg = "A storage backend sits below the skeleton: it never imports tai42-skeleton."

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
